[package]
name = "themelios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bit-set = "0.5.3"
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.3.0"
derivative = "2.2.0"
env_logger = "0.10.1"
fnv = "1.0.7"
futures = "0.3.30"
imbl = { version = "2.0.3", features = ["small-chunks"] }
k8s-openapi = { version =  "0.21.0", features = ["v1_26"] }
kube = { version = "0.88.1", features = ["runtime"] }
maplit = "1.0.2"
num_cpus = "1.13.1"
paste = "1.0.14"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
smallvec = "1.13.1"
stateright = "0.30.1"
sysinfo = "0.29.7"
test-log = { version = "0.2.13", features = ["trace"] }
time = { version = "0.3.30", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"], optional = true }

[patch.crates-io]
stateright = { version = "0.30.1", git = "https://github.com/jeffa5/stateright", branch = "mco" }
# stateright = { version = "0.30.1", path = "../stateright" }

[profile.release]
debug = true

[features]
default = []
serve = ["dep:uuid"]

[dev-dependencies]
stdext = "0.3.1"
